javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.14.METHODSMUSTEXIST.javali
//All referenced methods must exist (NO_SUCH_METHOD)
//Rule 2.3.14

class Reference{
	void exists(){
	}
}
class Main {
int y;
Reference r;
	void main() {
		r = new Reference();
		y = r.doesNotExist();
	}
}